[smita]:new updated code

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,11 @@
+/abstractClass/
+/accessSpecifiers/
+/accessTest/
+/arrayStudy/
+/casting/
+/collectionStudy/
+/constructor/
+/constructor_Study/
 /controlStatement/
 /dataTypes/
 /exception/
@@ -6,14 +14,13 @@
 /logical/
 /loops/
 /methods/
+/pattern/
 /polymorphism/
 /practiceAbstactClass/
 /practiseDatatypes/
+/star_logic/
 /stringStudy/
 /test/
 /testing_batch/
 /thisAndSuperKeyword/
 /variable_study/
-/patterns/
-/pattern/
-/star_logic/
